zim/download-kiwix/mirrorbrain-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zim
  labels:
    app: mirrorbrain-web
  name: mirrorbrain-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirrorbrain-web
  template:
    metadata:
      labels:
        app: mirrorbrain-web
    spec:
      containers:
      - image: ghcr.io/kiwix/mirrorbrain:bookworm
      # - image: ghcr.io/kiwix/mirrorbrain:latest
        imagePullPolicy: Always
        name: apache
        command: ["httpd-foreground", "-DUseMaxMind"]
        # command: ["httpd-foreground"]
        volumeMounts:
        - mountPath: "/var/www/download.kiwix.org"
          name: download-volume
          readOnly: true
        - mountPath: "/var/www/library.kiwix.org"
          name: library-volume
          readOnly: true
        - mountPath: "/data/maps/"
          name: maps-volume
          readOnly: true
        - name: mb-volume
          subPath: hash
          mountPath: "/usr/share/mirrorbrain"
          readOnly: true
        - name: mb-volume
          subPath: geoip
          mountPath: "/usr/local/geoip/share/GeoIP"
          readOnly: true
        - name: mb-volume
          subPath: geoip-maxmind
          mountPath: "/usr/share/GeoIP"
          readOnly: true
        - name: configs
          subPath: mirrorbrain.conf
          mountPath: "/etc/mirrorbrain.conf"
          readOnly: true
        - name: configs
          subPath: httpd.conf
          mountPath: "/usr/local/apache2/conf/httpd.conf"
          readOnly: true
        - name: configs
          subPath: httpd-vhosts.conf
          mountPath: "/usr/local/apache2/conf/extra/httpd-vhosts.conf"
          readOnly: true
        - mountPath: "/usr/local/apache2/logs/custom"
          subPath: download-kiwix
          name: nginx-logs-volume
          readOnly: false
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "3Gi"
            cpu: "200m"
      volumes:
      - name: download-volume
        persistentVolumeClaim:
          claimName: kiwix-download-pvc
      - name: library-volume
        persistentVolumeClaim:
          claimName: kiwix-library-pvc
      - name: mb-volume
        persistentVolumeClaim:
          claimName: mirrorbrain-support-pvc
      - name: maps-volume
        persistentVolumeClaim:
          claimName: maps-pvc
      - name: configs
        configMap:
          name: mb-configs
      - name: nginx-logs-volume
        persistentVolumeClaim:
          claimName: nginx-logs-pvc
      nodeSelector:
        k8s.kiwix.org/role: "storage"
---
apiVersion: v1
kind: Service
metadata:
  namespace: zim
  name: mirrorbrain-web-service
  labels:
    app: mirrorbrain-web
spec:
  selector:
    app: mirrorbrain-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirrorbrain-web-ingress
  namespace: zim
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://download.kiwix.org/"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "$scheme://download.kiwix.org/"
    # android deep-linking validator (#190)
    nginx.ingress.kubernetes.io/server-snippet: |
        location /.well-known/assetlinks.json {
          add_header Content-Type "application/json";
          return 200 '[{"relation": ["delegate_permission/common.handle_all_urls"], "target": {"namespace": "android_app", "package_name": "org.kiwix.kiwixmobile", "sha256_cert_fingerprints": ["6D:FB:FC:62:E1:65:87:A7:8A:A2:D9:58:5A:E9:BB:7F:69:73:C2:BF:84:03:4B:7B:90:10:1A:40:14:09:F5:AA"]}}, {"relation": ["delegate_permission/common.handle_all_urls"], "target": {"namespace": "android_app", "package_name": "org.kiwix.kiwixmobile", "sha256_cert_fingerprints": ["34:AB:04:06:08:51:BB:3A:37:1A:A6:F [...]
        }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - download.kiwix.org
      secretName: download-kiwix-org-tls
    - hosts:
      - lbo.download.kiwix.org
      secretName: lbo-download-kiwix-org-tls
  rules:
  - host: download.kiwix.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mirrorbrain-web-service
            port:
              number: 80
  - host: lbo.download.kiwix.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mirrorbrain-web-service
            port:
              number: 80
